# leetcode

./: README.adoc
haskell/: AddOneRowToTree.hs  AverageOfLevelsInBinaryTree.hs  BinaryTree.hs  BreakPalindrome.hs  CheckIfTwoStringArraysAreEquivalent.hs  ConcatenationOfConsecutiveBinaryNumbers.hs  CountAndSay.hs  CountGoodNodesInBinaryTree.hs  DecodeWays.hs  DeleteMiddleNodeOfLinkedList.hs  FindKClosestElements.hs  IncreasingTripletSubsequence.hs  IntegerToRoman.hs  KthLargestElement.hs  LargestPerimeterTriangle.hs  Main.hs  MakeStringGreat.hs  MinimumTimeToMakeRopeColorful.hs  NumberOfDiceRollsWithTargetSum.hs  NumbersWithSameConsecutiveDifferences.hs  OrderlyQueue.hs  PathSum.hs  PseudoPalindromicPathsInBinaryTree.hs  PushDominoes.hs  RemoveAllAdjacentDuplicatesInString.hs  RemoveDuplicatesFromSortedArray.hs  ReverseVowelsOfString.hs  ReverseWordsInString.hs  SetMismatch.hs  SkylineProblem.hs  ThreeSumClosest.hs  TrappingRainWater.hs  TwoSum4.hs  averageOfLevelsInBinaryTree.hs  findKClosestElements.hs  haskell.cabal  numbersWithSameConsecutiveDifferences.hs  pushDominoes.hs  skylineProblem.hs  trappingRainWater.hs
src/main/kotlin/: 3sum.kt  3sumClosest.kt  ListNode.kt  Node.kt  TreeNode.kt  Trie.kt  UnionFind.kt  addOneRowToTree.kt  addTwoNumbers.kt  averageOfLevelsInBinaryTree.kt  backspaceStringCompare.kt  bagOfTokens.kt  bestTimeToBuyAndSellStock.kt  bestTimeToBuyAndSellStock4.kt  binarySearch.kt  binaryTreeInorderTraversal.kt  binaryTreePruning.kt  breakPalindrome.kt  checkIfTwoStringArraysAreEquivalent.kt  combinationSum.kt  concatenationOfArray.kt  decodeWays.kt  (+107 more)
